        Class Packet:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
        Class PacketData<Held>:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
            - The inner ChangeEventSpan class has a new member function held().
        Enum PacketHeldBy:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., HELD_BY_PACKET) have been
              renamed as scoped enum values (e.g., PacketHeldBy::Packet).
              As this enumeration was for internal use, the old names have
              been removed completely.
        Enum PacketType:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., PACKET_TRIANGULATION3) have been
              renamed as scoped enum values (e.g., PacketType::Triangulation3).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class Perm<n>:
            - New routine hash().
            - New class constant degree.
            - Added an alias Perm<6>::cachedOrder(), for consistency with the
              other permutation classes Perm<2..15>.
        Enum PermCodeType:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., PERM_CODE_IMAGES) have been